# WasmEdge-shenben

./: .CurrentChangelog.md  .bashrc_settings  README.md  cmd-torch.sh  cmd.sh  mps.sh  update.sh
.github/workflows/: build-extensions.yml
plugins/wasi_nn/: CMakeLists.txt  wasinnenv.h  wasinnfunc.cpp
script/: cmd-tflite.sh  cmd-torch.sh  mps.sh
